--- a/index.html
+++ b/index.html
@@ -564,7 +564,8 @@
                     <a href="#home" class="menu-item" onclick="alert('ไปที่หน้าหลัก')">
                         <i>🏠</i> Home
                     </a>
-                    <a href="#contact" class="menu-item" onclick="alert('ติดต่อผู้พัฒนา')">
+                     <a href="#" class="app" id="contactButton">
+<!--                     <a href="#contact" class="menu-item" onclick="alert('ติดต่อผู้พัฒนา')"> -->
                         <i>✉️</i> Contact Me
                     </a>
                 </div>
